# dialogic-rest-cpp

./: Makefile.am  NEWS  README.md  XmlDomDocument.cpp  XmlDomDocument.h  appframework.cpp  appframework.h  call.h  calls.h  conference720p.cpp  conference720p.h  configure.ac  confvideoplay.h  confvideoplays.h  dispatchxmscmd.cpp  dispatchxmscmd.h  git_submit.txt  license.txt  main.cpp  make_submit.sh  replycontentcallback.h  xmscmds.cpp  xmscmds.h  xmseventparser.h  xmsreplyparser.h
lib/: getoption.h  inifile.cpp  inifile.h  logger.cpp  logger.h
